--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "formik": "^2.2.9",
     "mysql": "^2.18.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "redux": "^4.2.0",
+    "redux-react-session": "^2.6.1",
+    "redux-thunk": "^2.4.1",
+    "url": "^0.11.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
