--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "redux-thunk": "^2.4.1",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "devextreme": "^21.2.4",
+    "devextreme-react": "^21.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "devextreme-themebuilder": "^21.2.4"
   }
 }
